Finished the getting the stats by the current loggedIn talent.
